# webserv

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile  clangd_config.yaml  devcontainer.json
.github/workflows/: MatrixBuild.yml
configs/: config1.conf  config2.conf  default.conf  minitest.conf  webserv.conf
src/: ClientSocket.cpp  ClientSocket.hpp  IOManager.cpp  IOManager.hpp  IOTask.cpp  IOTask.hpp  MasterSocket.cpp  MasterSocket.hpp  Server.cpp  Server.hpp  Webserv.cpp  Webserv.hpp  main.cpp
src/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp  Utils.cpp  Utils.hpp
src/HTTP/: BodyParser.cpp  BodyParser.hpp  CGIParser.cpp  CGIParser.hpp  HTTP.cpp  HTTP.hpp  HTTPBase.hpp  HTTPRequest.hpp  HTTPRequestParser.cpp  HTTPRequestParser.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPUtils.cpp  HTTPUtils.hpp  HeaderParser.cpp  HeaderParser.hpp  MultipartFormParser.cpp  MultipartFormParser.hpp  RequestLineParser.cpp  RequestLineParser.hpp
src/IO/: CGIReadTask.cpp  CGIReadTask.hpp  CGIWriteTask.cpp  CGIWriteTask.hpp  ClientSocketReadTask.cpp  ClientSocketReadTask.hpp  ClientSocketWriteTask.cpp  ClientSocketWriteTask.hpp  FileReadTask.cpp  FileReadTask.hpp  FileWriteTask.cpp  FileWriteTask.hpp  IOManager.cpp  IOManager.hpp  IOTask.hpp  StdinReadTask.cpp  StdinReadTask.hpp
src/IO/IOTask/: IOTask.hpp
src/IO/IOTask/ReadTask/: CGIReadTask.cpp  CGIReadTask.hpp  ClientSocketReadTask.cpp  ClientSocketReadTask.hpp  FileReadTask.cpp  FileReadTask.hpp  StdinReadTask.cpp  StdinReadTask.hpp
src/IO/IOTask/WriteTask/: CGIWriteTask.cpp  CGIWriteTask.hpp  ClientSocketWriteTask.cpp  ClientSocketWriteTask.hpp  FileWriteTask.cpp  FileWriteTask.hpp
src/Parser/CGIResponseParser/: CGIResponseParser.cpp  CGIResponseParser.hpp
src/Parser/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
src/Parser/HTTPBodyParser/: HTTPBodyParser.cpp  HTTPBodyParser.hpp
src/Parser/HTTPHeaderParser/: HTTPHeaderParser.cpp  HTTPHeaderParser.hpp
src/Parser/HTTPHeaderValueParser/: HTTPHeaderValueParser.cpp  HTTPHeaderValueParser.hpp
src/Parser/HTTPRequestParser/: BodyParser.cpp  ChunkedBodyParser.cpp  HTTPRequestParser.cpp  HTTPRequestParser.hpp  MultipartBodyParser.cpp  RequestLineParser.cpp
src/Parser/MultipartFormParser/: MultipartFormParser.cpp  MultipartFormParser.hpp
src/Parser/UriParser/: UriParser.cpp  UriPaser.hpp
src/RequestHandler/: AutoIndexResponse.cpp  BuiltinCGIUpload.cpp  BuiltinCGIUpload.hpp  HeaderProcessFunctions.cpp  HeaderProsess.cpp  RequestHandler.cpp  RequestHandler.hpp  Resource.cpp  Resource.hpp
src/RequestHandler/Resource/: CGIResource.cpp  CGIResource.hpp  DirectoryResource.cpp  DirectoryResource.hpp  NoSuchFileResource.cpp  NoSuchFileResource.hpp  ReadFileResource.cpp  ReadFileResource.hpp  Resource.cpp  Resource.hpp  StaticFileResource.cpp  StaticFileResource.hpp
src/Socket/: ClientSocket.cpp  ClientSocket.hpp  MasterSocket.cpp  MasterSocket.hpp
src/Utils/: ContentType.cpp  ContentType.hpp  FdSet.cpp  FdSet.hpp  FileDescriptor.cpp  FileDescriptor.hpp  Functions.cpp  Functions.hpp  Functions.tpp  Logger.cpp  Logger.hpp  Macros.hpp  SharedPtr.hpp  SharedPtr.tpp  Time.cpp  Time.hpp  Types.hpp  UniPointer.hpp  UniPointer.tpp  Utils.hpp
tests/httpRequestLineParser/: httpRequestLineParserTestCases.cpp
www/: Index.html
www/cgi-bin/: 10seconds.py  404_image.py  bad_cgi.py  cgi_tester.php  cgi_tester.py  chunked.py  contentLength.py  environ.py  hello_world.py  page1.txt  pipe_flooding.py  pwd.py  python.py  shebang.php  upload.py
www/emuserv/: emu_index.html
www/error/: 403.html  500.html
www/html/: Index.html  emu.html  form.html  tho.html  upload.html
www/html/error/: 404.html  502.html
www/thoserv/: tho_index.html
www/webserv/: cgi_test.html  error_page_test.html  file_upload_test.html  index.html  login.html  register.html
www/webserv/cgi-bin/: c_execute.out  cgi_tester.py  chunked.py  cookie_test.py  no_response.py  shebang.php
www/webserv/error/: 404.html  502.html
